<resources>
    <string name="app_name">HW05</string>
    <string name="play_choose_a_button">Play choose a button</string>
    <string name="paper">Paper</string>
    <string name="rock">Rock</string>
    <string name="scissors">Scissors</string>
    <string name="wait_player">Wait Player</string>
    <string name="player">Player</string>
    <string name="computer">Computer</string>
    <string name="rock_paper_scissors">Rock paper scissors</string>
    <string name="win">You Win!!!!!</string>
    <string name="lose">You lose!!!!!</string>
    <string name="draw">Draw!!!!!</string>
    <string name="guess">guess</string>
    <string name="reset">RESET</string>
    <string name="plz_enter_number">please enter number</string>
    <string name="guess_little">You guessed too little!</string>
</resources>