<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".Rock_Paper_Scissors">

    <TextView
        android:id="@+id/guessnumber_textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/rock_paper_scissors"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/computer"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/comImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="80dp"
                android:background="#00000000"
                android:scaleType="fitCenter"
                tools:src="@drawable/scissor" />

            <TextView
                android:id="@+id/txtCom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wait_player"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player"
                android:textSize="24sp"/>

            <ImageButton
                android:id="@+id/btnScissors"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:background="#00000000"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/scissor" />
            <ImageButton
                android:id="@+id/btnRock"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:background="#00000000"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/rock" />
            <ImageButton
                android:id="@+id/btnPaper"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:background="#00000000"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/paper" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtResult"
        android:gravity="center"
        android:text="@string/play_choose_a_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/game1tolobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back" />

</LinearLayout>